# jr-embed

./: meson.build
src/plugin/: main.cpp
src/test/: main.cpp
